fix issue with login button resizing, fix welcome nav on mobile to make icons more compact and not pulse

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -276,6 +276,10 @@
         grid-template-rows: auto auto;
     }
 
+    .icon-image {
+        transform: scale(0.8);
+    }
+
     #projects-icon {
         grid-column: 1 / 3;
         grid-row: 2;
@@ -301,7 +305,7 @@
         grid-row: 3;
     }
 
-    .icon-grow {
-        height: 2em;
+    .icon-grow:hover {
+        transform: scale(1);
     }
 }
